[package]
name = "pop_calc"
version = "0.1.0"
edition = "2021"
authors = ["Garu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "memoryapi", "errhandlingapi", "synchapi","winuser"] }
