[package]
name = "pop_calc"
version = "0.1.0"
authors = ["Garu"]
edition = "2021"

# See more keys and their docefinitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = [
"winuser",
"memoryapi",
"processthreadapi",
"errhandlingapi",
"synchapi",
] }

